# StellarTool

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKS.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  build.bat  hz.txt  package.bat  setup.bat  tests.bat
.github/workflows/: ci.yml
Media/: README.md  generate_media.py
Nexus/: Nexus_Description.md  Nexus_Description_BBCode.txt  UPLOAD_CHECKLIST.md
Nexus/upload_texts/: 00_short_description.txt  01_description.txt  file_1_Stellar_Tool.txt
i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt_BR.json  ru.json  zh_Hans.json
qml/: Main.qml  Theme.qml
qml/components/: EditValueDialog.qml  LanguageDialog.qml
qml/pages/: ChangesPage.qml  ConflictsPage.qml  EasyMergePage.qml  HomePage.qml  MergePage.qml  SettingsPage.qml
src/: AppController.cpp  AppController.h  HeadlessRunner.cpp  HeadlessRunner.h  Translator.cpp  Translator.h  main.cpp
src/core/: BaselineManager.cpp  BaselineManager.h  Cue4Service.cpp  Cue4Service.h  GamePaths.cpp  GamePaths.h  MergeEngine.cpp  MergeEngine.h  ModImporter.cpp  ModImporter.h  ModTypes.cpp  ModTypes.h  PakService.cpp  PakService.h  ProjectStore.cpp  ProjectStore.h  TableDiffEngine.cpp  TableDiffEngine.h  UAssetService.cpp  UAssetService.h
src/models/: ChangeListModel.cpp  ChangeListModel.h  ConflictModel.cpp  ConflictModel.h  ModListModel.cpp  ModListModel.h
tests/: Fixtures.h  TestDiffEngine.cpp  TestMergeEngine.cpp  tst_main.cpp
tools/: VERSIONS.md
